feat: Enhance comparison notebook with examples for extracting words, merging data, and additional operations

--- a/data-understanding.ipynb
+++ b/data-understanding.ipynb
@@ -27,29 +27,25 @@
     "\n",
     "data = pd.read_csv('data/data_nasabah.csv', delimiter=';')\n",
     "\n",
-    "# Jumlah data (baris dan kolom)\n",
-    "cprint(f\"Jumlah data (baris, kolom): {data.shape}\", \"green\")\n",
+    "cprint(f\" Data (rows, columns): {data.shape}\", \"green\") # Show the shape of the DataFrame (rows, columns)\n",
     "\n",
-    "# Informasi tentang tipe data dan skema pengkodean\n",
-    "cprint(\"\\nInformasi tipe data dan skema pengkodean:\", \"green\")\n",
+    "cprint(\"\\nInformation data types and encoding\", \"green\") # Display data types and encoding scheme\n",
     "print(data.info())\n",
     "\n",
-    "# Statistik deskriptif untuk data numerik\n",
-    "cprint(\"\\nStatistik deskriptif untuk data numerik:\", \"green\")\n",
+    "cprint(\"\\nData descriptive statistics for numerical data :\", \"green\") # Display descriptive statistics for numerical data\n",
     "print(data.describe())\n",
     "\n",
-    "# Melihat beberapa baris pertama dari data\n",
-    "cprint(\"\\nBeberapa baris pertama dari data:\", \"green\")\n",
+    "cprint(\"\\nShow DataFrame\", \"green\") # Display the first few rows of the DataFrame\n",
     "print(data.head())\n",
     "\n",
-    "# Melakukan pengkodean untuk kolom kategorikal\n",
+    "# Convert categorical columns to numerical encoding\n",
     "data['jenis_kelamin'] = data['jenis_kelamin'].map({'Laki-Laki': 1, 'Perempuan': 2})\n",
     "data['jenis_produk'] = data['jenis_produk'].map({'tabungan': 1, 'kartu_kredit': 2, 'deposito': 3})\n",
     "data['pengguna_mobile_banking'] = data['pengguna_mobile_banking'].map({'YA':1, 'TIDAK': 2})\n",
     "cprint(f\"\\nData setelah pengkodean kolom :\", \"green\")\n",
     "print(data.head())\n",
     "\n",
-    "# Menampilkan jumlah nilai unik untuk setiap kolom (untuk memahami kategori)\n",
+    "# Display the number of unique values for each column\n",
     "cprint(\"\\nJumlah nilai unik untuk setiap kolom:\", \"green\")\n",
     "for column in data.columns:\n",
     "    print(f\"{column}: {data[column].nunique()}\")"
@@ -182,8 +178,6 @@
     "import seaborn as sns\n",
     "\n",
     "data = pd.read_csv('data/data_nasabah.csv', delimiter=';')\n",
-    "\n",
-    "cprint('Lima baris pertama dari data:', 'green')\n",
     "print(data.head())\n",
     "\n",
     "cprint('\\nInformasi tentang data:', 'green')\n",
@@ -196,7 +190,7 @@
     "for column in data.columns:\n",
     "    print(f\"{column}: {data[column].nunique()}\")\n",
     "\n",
-    "# Analisis Distribusi Data Numerik\n",
+    "# Analysis Distribution of Numerical Data\n",
     "cprint('\\nAnalisis Distribusi Data Numerik:', 'green')\n",
     "numerical_features = data.select_dtypes(include=['number'])\n",
     "for feature in numerical_features:\n",
@@ -205,30 +199,30 @@
     "    plt.title(f\"Distribusi {feature}\")\n",
     "    plt.show()\n",
     "\n",
-    "# Analisis Korelasi Anatar Variabel Numerik\n",
+    "# Analysis Correlation Between Numerical Variables\n",
     "cprint('\\nAnalisis Korelasi Antara Variabel Numerik:', 'green')\n",
     "numerical_data = data.select_dtypes(include=['number'])\n",
     "correlation_matrix = numerical_data.corr() # Calculate correlation on numerical data only\n",
     "plt.figure(figsize=(12, 10))\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
     "\n",
-    "# Analisis Data Kategorikal\n",
+    "# Display the correlation matrix\n",
     "cprint('\\nAnalisis Data Kategorikal:', 'green')\n",
-    "categorical_feeatures = data.select_dtypes(include=['object']).columns\n",
-    "for feature in categorical_feeatures:\n",
+    "categorical_features = data.select_dtypes(include=['object']).columns\n",
+    "for feature in categorical_features:\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.countplot(x=feature, data=data)\n",
     "    plt.title(f\"Jumlah kemunculan {feature}\")\n",
     "    plt.xticks(rotation=45)\n",
     "    plt.show()\n",
     "\n",
-    "# Analisis Nilai Hilang (Missing Values)\n",
+    "# Analysis Missing Values\n",
     "cprint('\\nAnalisis Nilai Hilang (Missing Values):', 'green')\n",
     "missing_value = data.isnull().sum()\n",
     "print(f\"\\nJumlah Nilai Hilang Setiap Kolom:\")\n",
     "print(missing_value)\n",
     "\n",
-    "# Analisis Outlier (Nilai Aneh)\n",
+    "# Analysis Outliers (Nilai Aneh/ Anomali)\n",
     "cprint('\\nAnalisis Outlier (Nilai Aneh):', 'green')\n",
     "for feature in numerical_features:\n",
     "    plt.figure(figsize=(8, 6))\n",
@@ -236,7 +230,7 @@
     "    plt.title(f\"Deteksi Outlier pada {feature}\")\n",
     "    plt.show()\n",
     "\n",
-    "#  Menampilkan distribusi data untuk kolom tertentu e.g 'umur'\n",
+    "#  Displaying Distribution of Data for Specific Column (e.g., 'umur')\n",
     "cprint('\\nMenampilkan distribusi data untuk kolom tertentu (umur):', 'green')\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.histplot(data['umur'], kde=True)\n",
@@ -245,7 +239,7 @@
     "plt.ylabel(\"Frekuensi Y\")\n",
     "plt.show()\n",
     "\n",
-    "# Analisis hubungan antara dua variabel numerik e.g 'umur' dan 'Pendapatan'\n",
+    "# Displaying Relationship Between Two Numerical Variables (e.g., 'umur' and 'pendapatan')\n",
     "cprint('\\nAnalisis hubungan antara dua variabel numerik (umur dan Pendapatan):', 'green')\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.scatterplot(x='umur', y='pendapatan', data=data)\n",
@@ -254,7 +248,7 @@
     "plt.ylabel('Pendapatan Y')\n",
     "plt.show()\n",
     "\n",
-    "# Menampilkan distribusi data untuk kolom 'Jenis Kelamin'\n",
+    "# Displaying Distribution of Data for Categorical Column (e.g., 'jenis_kelamin')\n",
     "cprint('\\nMenampilkan distribusi data untuk kolom Jenis Kelamin:', 'green')\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.countplot(x='jenis_kelamin', data=data)\n",
@@ -263,7 +257,7 @@
     "plt.ylabel('Jumlah Y')\n",
     "plt.show()\n",
     "\n",
-    "# Menampilkan hubungan antara 'Jenis Kelamin' dan 'Pendapatan'\n",
+    "# Displaying Relationship Between Categorical and Numerical Variables (e.g., 'jenis_kelamin' and 'pendapatan')\n",
     "cprint('\\nMenampilkan hubungan antara Jenis Kelamin dan Pendapatan:', 'green')\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.boxplot(x='jenis_kelamin', y='pendapatan', data=data)\n",
