fix: Enhance data object notebook with data quality validation and exploratory data analysis

--- a/data-selection.ipynb
+++ b/data-selection.ipynb
@@ -3,14 +3,18 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Data Object",
+   "source": [
+    "# Data Selection\n",
+    "**Probability Sampling:** Simple random Sampling, Stratified Sampling, Custer Sampling, Systematic Sampling\n",
+    "**Non-Probability Sampling;** Convenience Sampling, Purposive Sampling, Snowball Sampling, Quota Sampling"
+   ],
    "id": "41a06c0c0a10b6ad"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T07:20:28.216206Z",
-     "start_time": "2025-07-29T07:20:28.196354Z"
+     "end_time": "2025-07-30T00:23:34.261049Z",
+     "start_time": "2025-07-30T00:23:34.246079Z"
     }
    },
    "cell_type": "code",
@@ -24,7 +28,7 @@
    ],
    "id": "82c16d3881306360",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -38,8 +42,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T07:20:28.302231Z",
-     "start_time": "2025-07-29T07:20:28.253193Z"
+     "end_time": "2025-07-30T00:23:34.386758Z",
+     "start_time": "2025-07-30T00:23:34.298885Z"
     }
    },
    "cell_type": "code",
@@ -234,12 +238,12 @@
        "</div>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 39
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -253,8 +257,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T07:20:29.480256Z",
-     "start_time": "2025-07-29T07:20:28.405820Z"
+     "end_time": "2025-07-30T00:23:36.078280Z",
+     "start_time": "2025-07-30T00:23:34.448378Z"
     }
    },
    "cell_type": "code",
@@ -361,7 +365,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 40
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -375,8 +379,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T07:20:29.600783Z",
-     "start_time": "2025-07-29T07:20:29.564520Z"
+     "end_time": "2025-07-30T00:23:36.248882Z",
+     "start_time": "2025-07-30T00:23:36.167294Z"
     }
    },
    "cell_type": "code",
@@ -434,13 +438,13 @@
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T07:20:34.546045Z",
-     "start_time": "2025-07-29T07:20:29.649257Z"
+     "end_time": "2025-07-30T00:23:41.925929Z",
+     "start_time": "2025-07-30T00:23:36.283502Z"
     }
    },
    "cell_type": "code",
@@ -591,7 +595,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 42
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -602,8 +606,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T07:20:34.601185Z",
-     "start_time": "2025-07-29T07:20:34.571564Z"
+     "end_time": "2025-07-30T00:23:41.970873Z",
+     "start_time": "2025-07-30T00:23:41.945783Z"
     }
    },
    "cell_type": "code",
@@ -621,7 +625,7 @@
     "X = df.drop('target', axis=1)\n",
     "y = df['target']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42) # Probability Sampling: Stratified sampling\n",
     "\n",
     "# Menampilkan ukuran data training dan testing\n",
     "print(\"Ukuran data training:\", X_train.shape)\n",
@@ -662,13 +666,13 @@
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-29T07:42:43.512892Z",
-     "start_time": "2025-07-29T07:42:43.486279Z"
+     "end_time": "2025-07-30T00:23:42.042482Z",
+     "start_time": "2025-07-30T00:23:42.014041Z"
     }
    },
    "cell_type": "code",
@@ -758,11 +762,40 @@
       "148       2  \n",
       "149       2  \n",
       "\n",
+      "[298 rows x 5 columns]\n",
+      "\n",
+      "Dataset yang sudah digabungkan dan diformat:\n",
+      "      sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "0                  5.1               3.5                1.4               0.2   \n",
+      "1                  4.9               3.0                1.4               0.2   \n",
+      "2                  4.7               3.2                1.3               0.2   \n",
+      "3                  4.6               3.1                1.5               0.2   \n",
+      "4                  5.0               3.6                1.4               0.2   \n",
+      "..                 ...               ...                ...               ...   \n",
+      "145                6.7               3.0                5.2               2.3   \n",
+      "146                6.3               2.5                5.0               1.9   \n",
+      "147                6.5               3.0                5.2               2.0   \n",
+      "148                6.2               3.4                5.4               2.3   \n",
+      "149                5.9               3.0                5.1               1.8   \n",
+      "\n",
+      "     target  \n",
+      "0         0  \n",
+      "1         0  \n",
+      "2         0  \n",
+      "3         0  \n",
+      "4         0  \n",
+      "..      ...  \n",
+      "145       2  \n",
+      "146       2  \n",
+      "147       2  \n",
+      "148       2  \n",
+      "149       2  \n",
+      "\n",
       "[298 rows x 5 columns]\n"
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 14
   }
  ],
  "metadata": {
