feat: Enhance data object notebook with data quality validation and exploratory data analysis

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -19,17 +19,31 @@
    "id": "808be96ada8c4b5d"
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import requests\n",
+    "import numpy as np"
+   ],
+   "id": "bd678ac9cd4c63ba"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:21.467769Z",
-     "start_time": "2025-07-08T07:42:21.406606Z"
+     "end_time": "2025-07-31T02:52:18.465131Z",
+     "start_time": "2025-07-31T02:52:18.110314Z"
     }
    },
    "source": [
-    "import pandas as pd\n",
+    "\n",
     "\n",
     "\n",
     "df = pd.read_csv('data/pandas_w3.csv')\n",
@@ -87,15 +101,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:23.349747Z",
-     "start_time": "2025-07-08T07:42:21.701907Z"
+     "end_time": "2025-07-31T02:52:20.614253Z",
+     "start_time": "2025-07-31T02:52:18.520873Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import requests\n",
-    "\n",
-    "\n",
     "response = requests.get('https://dummyjson.com/users')\n",
     "if response.status_code == 200:\n",
     "    data = response.json()\n",
@@ -222,8 +233,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:24.207792Z",
-     "start_time": "2025-07-08T07:42:24.134186Z"
+     "end_time": "2025-07-31T02:52:20.689644Z",
+     "start_time": "2025-07-31T02:52:20.659830Z"
     }
    },
    "cell_type": "code",
@@ -276,8 +287,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:24.744498Z",
-     "start_time": "2025-07-08T07:42:24.705126Z"
+     "end_time": "2025-07-31T02:52:20.806911Z",
+     "start_time": "2025-07-31T02:52:20.769750Z"
     }
    },
    "cell_type": "code",
@@ -353,8 +364,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:25.071491Z",
-     "start_time": "2025-07-08T07:42:25.052174Z"
+     "end_time": "2025-07-31T02:52:20.892379Z",
+     "start_time": "2025-07-31T02:52:20.865826Z"
     }
    },
    "cell_type": "code",
@@ -421,8 +432,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:25.420226Z",
-     "start_time": "2025-07-08T07:42:25.391065Z"
+     "end_time": "2025-07-31T02:52:21.062222Z",
+     "start_time": "2025-07-31T02:52:20.993816Z"
     }
    },
    "cell_type": "code",
@@ -493,8 +504,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:25.822980Z",
-     "start_time": "2025-07-08T07:42:25.719387Z"
+     "end_time": "2025-07-31T02:52:21.125848Z",
+     "start_time": "2025-07-31T02:52:21.078774Z"
     }
    },
    "cell_type": "code",
@@ -572,8 +583,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:42:26.126473Z",
-     "start_time": "2025-07-08T07:42:26.106234Z"
+     "end_time": "2025-07-31T02:52:21.176753Z",
+     "start_time": "2025-07-31T02:52:21.157783Z"
     }
    },
    "cell_type": "code",
@@ -637,8 +648,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T12:13:41.411303Z",
-     "start_time": "2025-07-08T12:13:41.026146Z"
+     "end_time": "2025-07-31T02:52:21.301143Z",
+     "start_time": "2025-07-31T02:52:21.216067Z"
     }
    },
    "cell_type": "code",
@@ -689,7 +700,7 @@
      ]
     }
    ],
-   "execution_count": 39
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -700,8 +711,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T07:58:38.164017Z",
-     "start_time": "2025-07-08T07:58:37.766406Z"
+     "end_time": "2025-07-31T02:52:21.397416Z",
+     "start_time": "2025-07-31T02:52:21.318406Z"
     }
    },
    "cell_type": "code",
@@ -780,12 +791,12 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -796,15 +807,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-08T12:02:23.416505Z",
-     "start_time": "2025-07-08T12:02:20.488861Z"
+     "end_time": "2025-07-31T02:52:22.457073Z",
+     "start_time": "2025-07-31T02:52:21.602587Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
     "df = pd.read_csv('data/data_correlations.csv')\n",
     "\n",
     "print(df)\n",
@@ -856,7 +864,107 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 38
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Data Smoothing",
+   "id": "da94192f9dc503c0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-31T03:21:49.301157Z",
+     "start_time": "2025-07-31T03:21:48.936598Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Membuat data contoh\n",
+    "data = {'Usia': [22, 25, 28, 31, 34, 37, 40, 43, 46, 49]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Melakukan binning dengan lebar bin 10\n",
+    "bins = [0, 30, 40, 50]\n",
+    "labels = ['20s', '30s', '40s']\n",
+    "df['Kelompok_Usia'] = pd.cut(df['Usia'], bins=bins, labels=labels, right=False)\n",
+    "\n",
+    "print(df)"
+   ],
+   "id": "8e213eb75793f1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Usia Kelompok_Usia\n",
+      "0    22           20s\n",
+      "1    25           20s\n",
+      "2    28           20s\n",
+      "3    31           30s\n",
+      "4    34           30s\n",
+      "5    37           30s\n",
+      "6    40           40s\n",
+      "7    43           40s\n",
+      "8    46           40s\n",
+      "9    49           40s\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### Data Normalization\n",
+    "**Normalisasi Min Max**\n",
+    "\n",
+    "Rumus: `X'i = (Xi - Xmax) / (Xmax - Xmin) * (newMaxA - newMinA) + newMinA`\n",
+    "\n",
+    "1. X'i adalah nilai data yang telah dinormalisasi.\n",
+    "2. Xi adalah nilai data asli.\n",
+    "3. Xmin adalah nilai minimum dari seluruh dataset asli.\n",
+    "4. Xmax adalah nilai maksimum dari seluruh dataset asli.\n",
+    "5. newMinA adalah nilai minimum yang diinginkan untuk rentang baru.\n",
+    "6. newMaxA adalah nilai maksimum yang diinginkan untuk rentang baru."
+   ],
+   "id": "987a8ef4b1f6ea49"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-31T04:37:33.318151Z",
+     "start_time": "2025-07-31T04:37:33.273639Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def min_max_scaling(data, new_min, new_max):\n",
+    "    xmax = np.max(data)\n",
+    "    xmin = np.min(data)\n",
+    "\n",
+    "    scaled_data = (data - xmin) / (xmax - xmin) * (new_max - new_min) + new_min\n",
+    "    return scaled_data\n",
+    "\n",
+    "data = np.array([2,4,6,8])\n",
+    "\n",
+    "scaled_data = min_max_scaling(data, 1, 5)\n",
+    "print(scaled_data)\n",
+    "\n"
+   ],
+   "id": "f6f55c98fb2b9477",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         2.33333333 3.66666667 5.        ]\n"
+     ]
+    }
+   ],
+   "execution_count": 33
   }
  ],
  "metadata": {
